2009-08-31  Kent Tamura  <tkent@chromium.org>

Reviewed by Eric Seidel.

        - Change the reutrn type of HTMLInputElement::list so that it
          conforms to the standard.
        - Add HTMLInputElement::dataList()
        https://bugs.webkit.org/show_bug.cgi?id=28769


        * html/HTMLInputElement.cpp:
        (WebCore::HTMLInputElement::list):
        (WebCore::HTMLInputElement::dataList):
        (WebCore::HTMLInputElement::selectedOption):
        * html/HTMLInputElement.h:
        * html/HTMLInputElement.idl:


Canonical link: https://commits.webkit.org/39465@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47889 268f45cc-cd09-0410-ab3c-d52691b4dbfc