WebCore/html/HTMLInputElement.cpp
@@ -1773,7 +1773,12 @@ bool HTMLInputElement::placeholderShouldBeVisible() const
 }
 
 #if ENABLE(DATALIST)
-HTMLDataListElement* HTMLInputElement::list()
+HTMLElement* HTMLInputElement::list() const
+{
+    return dataList();
+}
+
+HTMLDataListElement* HTMLInputElement::dataList() const
 {
     if (!m_hasNonEmptyList)
         return 0;
@@ -1806,7 +1811,7 @@ HTMLDataListElement* HTMLInputElement::list()
     return 0;
 }
 
-HTMLOptionElement* HTMLInputElement::selectedOption()
+HTMLOptionElement* HTMLInputElement::selectedOption() const
 {
     String currentValue = value();
     // The empty value never matches to a datalist option because it
@@ -1814,7 +1819,7 @@ HTMLOptionElement* HTMLInputElement::selectedOption()
     if (currentValue.isEmpty())
         return 0;
 
-    HTMLDataListElement* sourceElement = list();
+    HTMLDataListElement* sourceElement = dataList();
     if (!sourceElement)
         return 0;
     RefPtr<HTMLCollection> options = sourceElement->options();
