WebCore/html/HTMLInputElement.h
@@ -197,8 +197,8 @@ public:
     void setSrc(const String&);
 
 #if ENABLE(DATALIST)
-    HTMLDataListElement* list();
-    HTMLOptionElement* selectedOption();
+    HTMLElement* list() const;
+    HTMLOptionElement* selectedOption() const;
 #endif
 
     int maxLength() const;
@@ -249,6 +249,10 @@ private:
 
     virtual bool isOptionalFormControl() const { return !isRequiredFormControl(); }
     virtual bool isRequiredFormControl() const;
+
+#if ENABLE(DATALIST)
+    HTMLDataListElement* dataList() const;
+#endif
 
     InputElementData m_data;
     int m_xPos;
